--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "flowbite": "^3.1.2",
+        "ionicons": "^8.0.13",
         "sweetalert2": "^11.23.0"
     }
 }
